--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <title>Liens des projets</title>
+        <title>Liens projets</title>
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
